[cassidal] add video downloading endpoint with redirect
